<resources>
    <string name="app_name" translatable="false">Leaders</string>
    <string name="app_version" translatable="false">v0.9.1</string>
    <string name="rules">règles</string>
    <string name="settings">options</string>
    <string name="puzzles">puzzles</string>
    <string name="replay">replay</string>
    <string name="duel">duel</string>
    <string name="main_menu_background">décor du menu principal</string>
    <string name="main_menu_button_icon">icône de bouton du menu principal</string>
    <string name="main_title">titre du jeu</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="back">retour</string>
    <string name="go_back_to_main_menu">Revenir au menu principal ?</string>
    <string name="crash_log_message">Un problème a provoqué la fermeture de l\'application.\n\nEn nous envoyant un rapport, vous nous aiderez à en identifier la cause et à le corriger rapidement.</string>
    <string name="title_puzzles_selection">PuzzleS</string>
    <string name="play">jouer</string>
    <string name="new_puzzle">Nouveau puzzle</string>
    <string name="edit_puzzle">Modifier</string>
    <string name="remove">Supprimer</string>
    <string name="import_puzzle">Importer</string>
    <string name="export_puzzle">Exporter</string>
    <string name="select_all">Tout sélectionner</string>
    <string name="unselect_all">Tout déselectionner</string>
    <string name="puzzle_solved_format">%s résolu !</string>
    <string name="checkbox">Case à cocher</string>
    <string name="official_puzzle_name_format">Puzzle #%03d</string>
    <string name="by_author">par %s</string>
    <string name="official_puzzles">officiels</string>
    <string name="custom">personnalisés</string>
    <string name="puzzle_unsolved_format">%s non résolu</string>
    <string name="go_back_to_puzzle_menu">Revenir au menu des puzzles ?</string>
    <string name="board">plateau</string>
    <string name="card_name_acrobat">acrobat</string>
    <string name="card_name_archer">archère</string>
    <string name="card_name_assassin">assassin</string>
    <string name="card_name_brewmaster">tavernier</string>
    <string name="card_name_bruiser">cogneur</string>
    <string name="card_name_claw_launcher">lance grappin</string>
    <string name="card_name_hermit_and_cub">viel ours &amp; ourson</string>
    <string name="card_name_illusionist">illusionniste</string>
    <string name="card_name_jailer">geôlier</string>
    <string name="card_name_leader_king">roi</string>
    <string name="card_name_leader_queen">reine</string>
    <string name="card_name_manipulator">manipulatrice</string>
    <string name="card_name_nemesis">nemesis</string>
    <string name="card_name_protector">protecteur</string>
    <string name="card_name_rider">cavalier</string>
    <string name="card_name_royal_guard">garde royal</string>
    <string name="card_name_vizier">vizir</string>
    <string name="card_name_wanderer">rôdeuse</string>
    <string name="color">couleur</string>
    <string name="error_toast_character_limited_to_one_per_team">Ce personnage est limité à un exemplaire par équipe</string>
    <string name="error_toast_max_two_leaders_on_the_board">Deux Leaders sont déjà présents sur le plateau</string>
    <string name="error_toast_limited_character">Ce personnage est limité à un seul exemplaire sur le plateau</string>
    <string name="card_formatted_name_acrobat">AcRoBaTE</string>
    <string name="card_formatted_name_archer">ARcHÈRE</string>
    <string name="card_formatted_name_assassin">ASSaSSiN</string>
    <string name="card_formatted_name_rider">cAVALIER</string>
    <string name="card_formatted_name_bruiser">CogNEUR</string>
    <string name="card_formatted_name_royal_guard">gARdE RoYAL</string>
    <string name="card_formatted_name_brewmaster">TAverNieR</string>
    <string name="card_formatted_name_claw_launcher">LAnCE-GRAPPiN</string>
    <string name="card_formatted_name_hermit_and_cub">ViEiL OuRS &amp; OuRSoN</string>
    <string name="card_formatted_name_jailer">GEOliER</string>
    <string name="card_formatted_name_leader">LEADER</string>
    <string name="card_formatted_name_vizier">VIZIR</string>
    <string name="card_formatted_name_illusionist">IlluSiOniSTE</string>
    <string name="card_formatted_name_manipulator">MAnIPUlATRicE</string>
    <string name="card_formatted_name_nemesis">NÉMÉSiS</string>
    <string name="card_formatted_name_protector">PRoTECtEuR</string>
    <string name="card_formatted_name_wanderer">RÔdEuSE</string>
    <string name="ability_info_active">Compétence\nactive</string>
    <string name="ability_info_passive">Compétence\npassive</string>
    <string name="ability_info_special">Compétence\nspéciale</string>
    <string name="ability_info_leader">Particularité\ndes leaders</string>
    <string name="card_description_acrobat">Saute en ligne droite par-dessus un personnage adjacent. Peut effectuer jusqu’à deux sauts consécutifs.</string>
    <string name="card_description_leader">La partie se termine si un leader est capturé ou encerclé.\n\nUn leader ne peut pas terminer son action dans une position où il serait capturé.</string>
    <string name="card_description_rider">Se déplace de deux cases en ligne droite.</string>
    <string name="card_description_bruiser">Se déplace sur la case d’un ennemi adjacent et le pousse sur l’une des trois cases opposées de votre choix.</string>
    <string name="card_description_manipulator">Déplace d’une case un ennemi visible en ligne droite et non-adjacent.</string>
    <string name="card_description_royal_guard">Se déplace, depuis n’importe quelle case, sur une case adjacente à votre Leader, puis peut ensuite se déplacer d’une case.</string>
    <string name="card_description_illusionist">Échange de position avec un Personnage visible en ligne droite et non-adjacent.</string>
    <string name="card_description_claw_launcher">Se déplace jusqu’à un Personnage visible en ligne droite ou l’attire jusqu’à lui.</string>
    <string name="card_description_brewmaster">Déplace d’une case un allié adjacent.</string>
    <string name="card_description_wanderer">Se déplace sur n’importe quelle case non-adjacente à un ennemi.</string>
    <string name="card_description_archer">Participe à la capture du Leader adverse à une distance de deux cases en ligne droite. Il n’est pas nécessaire que le Leader adverse soit visible.\n\nNe participe pas à la capture du Leader adverse s’il lui est adjacent.</string>
    <string name="card_description_assassin">Capture le Leader adverse, même sans autre allié participant.</string>
    <string name="card_description_jailer">Les ennemis adjacents ayant une compétence active ne peuvent pas l’utiliser.\n\nIl n’interrompt pas les actions en cours. Si un ennemi devient adjacent au geôlier au cours de son action, il peut la terminer normalement.</string>
    <string name="card_description_protector">Les compétences des ennemis ne peuvent déplacer ni le protecteur, ni ses alliés adjacents.</string>
    <string name="card_description_vizier">Votre Leader peut se déplacer d’une case supplémentaire lors de son action.</string>
    <string name="card_description_nemesis">Ne peut pas effectuer d’action durant son tour.\n\nDoit se déplacer de 2 cases après chaque action déplaçant le leader adverse. S’il n’est pas possible de la déplacer de 2 cases sans revenir à sa case d’origine, ne se déplace que d’une case.</string>
    <string name="card_description_hermit_and_cub">En les recrutant, vous prenez le contrôle du Vieil Ours et de l’Ourson. Cela ne compte que pour un seul recrutement.\n\nVous pouvez en déplacer un seul ou les deux à la suite. L’Ourson ne peut pas participer à la capture du leader adverse.</string>
    <string name="formatted_puzzle_rules">Vous contrÔlez les pions noirs,\ntrouvez comment gagner ce tour.</string>
    <string name="save">Sauvegarder</string>
    <string name="search_for_solutions">chercher les solutions</string>
    <string name="leaders_board_editor" translatable="false">Leaders Board Editor</string>
    <string name="invalid_lbe_url_character">Personnage invalide dans le lien LBE : %s</string>
    <string name="invalid_lbe_url_position">Position invalide dans le lien LBE : %s</string>
    <string name="invalid_lbe_url_not_found">Lien LBE non trouvé</string>
    <string name="remove_selected_puzzles">Supprimer les puzzles sélectionés ?</string>
    <string name="remove_selected_puzzle">Supprimer \"%s\" ?</string>
    <string name="warning_removal_cannot_be_undone">⚠ Toute suppression est définitive ⚠</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="puzzle_name">Nom du puzzle</string>
    <string name="anonymous_author">Auteur anonyme</string>
    <string name="puzzle_name_is_mandatory">Veuillez saisir un nom pour votre puzzle</string>
    <string name="puzzle_saved">Puzzle sauvegardé !</string>
    <string name="export_option_lbe_link_in_clipboard">Lien LBE vers le presse papier</string>
    <string name="export_option_to_file">Vers un fichier</string>
    <string name="export_puzzle_title">Export de puzzle</string>
    <string name="import_option_lbe_link_from_clipboard">Depuis un lien LBE dans le presse-papier</string>
    <string name="import_option_from_file">Depuis un fichier</string>
    <string name="import_puzzle_title">Import de puzzle</string>
    <string name="import_successful">Import réussi !</string>
    <string name="error_import_file_loading">Erreur durant le chargement du fichier d\'import</string>
    <string name="error_export_file_writing">Erreur rencontrée durant l\'écriture du fichier d\'export</string>
    <string name="choose_file_name">Saisissez un nom pour votre fichier</string>
    <string name="error_export_file_creation">Erreur rencontrée durant la création du fichier d\'export</string>
    <string name="export_successful">Export réussi !</string>
    <string name="unsaved_puzzle_changes">Vous avez des modifications non sauvegardées</string>
    <string name="invalid_puzzle">Puzzle invalide</string>
    <string name="puzzle_error_hermit_and_cub_limit">Il ne peut y avoir qu\'un seul viel ours ou ourson dans l\'équipe du joueur</string>
    <string name="puzzle_error_one_per_team_character">"Personnage limité à un par équipe: %s"</string>
    <string name="puzzle_error_one_leader_per_team">Il ne doit y avoir qu\'un leader par équipe</string>
    <string name="puzzle_error_leader_surrounded">Leader encerclé dans l\'équipe : %s</string>
    <string name="puzzle_error_leader_captured">Leader capturé dans l\'équipe : %s</string>
    <string name="puzzle_error_empty_board">Plateau vide</string>
    <string name="puzzle_error_leader_missing">Leader manquant dans l\'équipe : %s</string>
    <string name="searching_solution">Recherche de solution…</string>
    <string name="no_solution_found">Aucune solution trouvée</string>
    <string name="one_solution_found">Une solution trouvée</string>
    <string name="solution_x_out_of_n">Solution %d/%d</string>
    <string name="board_coordinates">Coordonnées du plateau</string>
    <string name="solution_search_not_recommended">Recherche de solution déconseillée</string>
    <string name="ok">OK</string>
    <string name="discovery_mode_title">dÉcouverte</string>
    <string name="strategist_mode_title">stratÈge</string>
    <string name="discovery_mode_summary">Recrutez vos personnages parmi une sélection de 3 tirée aléatoirement, renouvelée à chaque recrutement</string>
    <string name="game_mode">Mode de jeu</string>
    <string name="puzzle_author">Auteur du puzzle</string>
    <string name="save_puzzle">Sauvegarder le puzzle</string>
    <string name="creator_name" translatable="false">Hugo Fresnoy</string>
    <string name="alpha" translatable="false">ALPHA</string>
    <string name="beta" translatable="false">BETA</string>
</resources>