<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rect_gloden_outline_bg"
    tools:ignore="SpUsage">

    <TextView
        android:id="@+id/txvTitle_vwPuzzleSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/save_puzzle"
        android:textAllCaps="true"
        android:textColor="@color/app_golden"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txvName_vwPuzzleSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/puzzle_name"
        android:textAllCaps="true"
        android:textColor="@color/font"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle_vwPuzzleSave"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtName_vwPuzzleSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/bobby_jones_condensed"
        android:foreground="@drawable/round_rect_stroke"
        android:foregroundTint="@color/darker_font"
        android:gravity="start"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="25"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/font"
        android:textColorHint="@color/darker_font"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvName_vwPuzzleSave"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txvAuthor_vwPuzzleSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/puzzle_author"
        android:textAllCaps="true"
        android:textColor="@color/font"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName_vwPuzzleSave"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtAuthor_vwPuzzleSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent"
        android:ems="10"
        android:fontFamily="@font/bukhari_script"
        android:foreground="@drawable/round_rect_stroke"
        android:foregroundTint="@color/darker_font"
        android:hint="@string/anonymous_author"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/font"
        android:textColorHint="@color/darker_font"
        android:textIsSelectable="false"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAuthor_vwPuzzleSave"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/txvSave_vwPuzzleSave"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:minWidth="@dimen/dialog_button_width"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/app_golden"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAuthor_vwPuzzleSave"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txvCancel_vwPuzzleSave"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:minWidth="@dimen/dialog_button_width"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/app_golden"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txvSave_vwPuzzleSave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>