<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rect"
    android:padding="8dp"
    tools:ignore="SpUsage">

    <TextView
        android:id="@+id/txvTitle_vwGameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/bobby_jones_condensed"
        android:text="@string/game_mode"
        android:textColor="@color/font"
        android:textSize="@dimen/default_text_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/llyButtons_vwGameMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle_vwGameMode"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiscovery_vwGameMode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/selected_golden"
            android:fontFamily="@font/bourbon_test_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="2dp"
            android:paddingRight="0dp"
            android:text="@string/discovery_mode_title"
            android:textColor="@color/font"
            android:textSize="@dimen/default_text_font_size"
            app:cornerRadius="8dp"
            app:strokeColor="@color/font"
            app:strokeWidth="@dimen/default_stroke_width" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStrategist_vwGameMode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/darker_background"
            android:fontFamily="@font/bourbon_test_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="2dp"
            android:paddingRight="0dp"
            android:text="@string/strategist_mode_title"
            android:textColor="@color/font"
            android:textSize="@dimen/default_text_font_size"
            app:cornerRadius="8dp"
            app:strokeColor="@color/font"
            app:strokeWidth="@dimen/default_stroke_width" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvSummary_vwGameMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bobby_jones_condensed"
        android:justificationMode="inter_word"
        android:text="@string/discovery_mode_summary"
        android:textColor="@color/font"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txvTitle_vwGameMode"
        app:layout_constraintTop_toBottomOf="@+id/llyButtons_vwGameMode"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>